--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "bitcoin",
   "version": "0.0.0",
+  "homepage": "https://AvihayR.github.io/Bitcoin-Vue/",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
+    "gh-pages": "^6.1.0",
     "sass": "^1.69.5",
     "vite": "^4.4.11"
   }
